# glosso-lang

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  aedif.lua  cb  default.nix
core/: CMakeLists.txt  Instruction.cc  Instruction.hh  Metadata.cc  Metadata.hh  SizeInt.cc  SizeInt.hh  Value.cc  Value.hh
examples/: arithmeticSum.glasm  brainfxxx.glasm  casting.glasm  code_design.glo  fib.glasm  float.glasm  operator_def.glo  simpleLoop.glasm  usingmacro.glasm
glasm_std/: std.glasm
glosso-core/: Cargo.toml
glosso-core/src/: error.rs  instruction.rs  lib.rs  metadata.rs  pointer.rs  utility.rs  value.rs
glossoc/: Cargo.toml
glossovm/: Cargo.toml
lib/: CMakeLists.txt
olfactory/: Cargo.toml
syntax/: glasm-mode.el  glasm.vim
toolchain/glossoc/: Ast.hh  Ast_Expressions.cc  Ast_Expressions.hh  Ast_Statements.cc  Ast_Statements.hh  CMakeLists.txt  Error.cc  Error.hh  FileIO.cc  FileIO.hh  Lexer.cc  Lexer.hh  Location.cc  Location.hh  Parser.cc  Parser.hh  Span.cc  Span.hh  Token.cc  Token.hh  Utf8.cc  Utf8.hh  main.cc
toolchain/glossoc/tests/: CMakeLists.txt  LexerTest.hh  ParserTest.hh  mainTest.cc
toolchain/glossovm/: CMakeLists.txt  Debugger.cc  Debugger.hh  Error.cc  Error.hh  FileIO.cc  FileIO.hh  Vm.cc  Vm.hh  main.cc
toolchain/olfactory/: CMakeLists.txt  Compiler.cc  Compiler.hh  Error.cc  Error.hh  FileIO.cc  FileIO.hh  Preprocessor.cc  Preprocessor.hh  main.cc
